markup and style banner content

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,13 +10,15 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:900" rel="stylesheet">
 </head>
+
 <body>
   <header>
     <div class="container">
-      <div class="head">
+      <div class="head clearfix">
         <div class="logo">
-          <img src="./css/img/et_logo.png" alt="">
+          <img src="./img/et_logo.png" alt="">
         </div>
         <div class="head-nav">
           <ul>
@@ -29,17 +32,36 @@
           </ul>
         </div>
       </div>
-      <div class="countdown-row">
-        <div class="days">
-          <span class="day">313</span>
-          <div class="text">Days</div>
+      <div class="banner-content">
+        <div class="countdown-row clearfix">
+          <div class="countdown-units clearfix">
+            <div class="days">
+              <span class="day">313</span>
+              <div class="text">Days</div>
+            </div>
+            <div class="hours">
+              <span class="hour">12</span>
+              <div class="text">Hours</div>
+            </div>
+            <div class="minutes">
+              <span class="minute">54</span>
+              <div class="text">Minutes</div>
+            </div>
+            <div class="seconds">
+              <span class="second">20</span>
+              <div class="text">Seconds</div>
+            </div>
+          </div>
         </div>
-        <div class="hours"></div>
-        <div class="minutes"></div>
-        <div class="seconds"></div>
+        <h1 class="banner-title">Largest Tech Conference</h1>
+        <h2 class="banner-title-info">New York, 21-23 October, 2018</h2>
+        <p class="banner-btn">
+          <a href="#">Register Now</a>
+          <a href="#">Learn More</a>
+        </p>
       </div>
     </div>
   </header>
-
 </body>
+
 </html>
