--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://use.fontawesome.com/84703e2690.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:900" rel="stylesheet">
@@ -15,53 +17,98 @@
 
 <body>
   <header>
-    <div class="container">
-      <div class="head clearfix">
-        <div class="logo">
-          <img src="./img/et_logo.png" alt="">
-        </div>
-        <div class="head-nav">
-          <ul>
-            <li><a href="#">home</a></li>
-            <li><a href="#">speakers</a></li>
-            <li><a href="#">schedule</a></li>
-            <li><a href="#">about</a></li>
-            <li><a href="#">blog</a></li>
-            <li><a href="#">contact</a></li>
-            <li><a href="#">tickets</a></li>
-          </ul>
-        </div>
+    <!-- Header Panel -->
+    <div class="head container clearfix">
+      <div class="logo">
+        <img src="./img/et_logo.png" alt="">
       </div>
-      <div class="banner-content">
-        <div class="countdown-row clearfix">
-          <div class="countdown-units clearfix">
-            <div class="days">
-              <span class="day">313</span>
-              <div class="text">Days</div>
-            </div>
-            <div class="hours">
-              <span class="hour">12</span>
-              <div class="text">Hours</div>
-            </div>
-            <div class="minutes">
-              <span class="minute">54</span>
-              <div class="text">Minutes</div>
-            </div>
-            <div class="seconds">
-              <span class="second">20</span>
-              <div class="text">Seconds</div>
-            </div>
-          </div>
-        </div>
-        <h1 class="banner-title">Largest Tech Conference</h1>
-        <h2 class="banner-title-info">New York, 21-23 October, 2018</h2>
-        <p class="banner-btn">
-          <a href="#">Register Now</a>
-          <a href="#">Learn More</a>
-        </p>
+      <div class="head-nav">
+        <ul>
+          <li><a href="#">home</a></li>
+          <li><a href="#">speakers</a></li>
+          <li><a href="#">schedule</a></li>
+          <li><a href="#">about</a></li>
+          <li><a href="#">blog</a></li>
+          <li><a href="#">contact</a></li>
+          <li><a href="#">tickets</a></li>
+        </ul>
       </div>
     </div>
+    <div class="banner-content">
+      <div class="countdown-row clearfix">
+        <div class="countdown-units clearfix">
+          <div class="days">
+            <span class="day">313</span>
+            <div class="text">Days</div>
+          </div>
+          <div class="hours">
+            <span class="hour">12</span>
+            <div class="text">Hours</div>
+          </div>
+          <div class="minutes">
+            <span class="minute">54</span>
+            <div class="text">Minutes</div>
+          </div>
+          <div class="seconds">
+            <span class="second">20</span>
+            <div class="text">Seconds</div>
+          </div>
+        </div>
+      </div>
+      <h1 class="banner-title">Largest Tech Conference</h1>
+      <h2 class="banner-title-info">New York, 21-23 October, 2018</h2>
+      <p class="banner-btn">
+        <a href="#">Register Now</a>
+        <a href="#">Learn More</a>
+      </p>
+    </div>
   </header>
+  <!-- Header Panel End -->
+  <div class="about-section container">
+    <!-- About Panel -->
+    <div class="intro-text">
+      <h2 class="intro-title">About the Event</h2>
+      <p class="intro-services">Design, Development, UX and Products</p>
+    </div>
+    <div class="intro-video">
+      <img src="./img/eventech-intro-video.jpg" alt="">
+    </div>
+  </div>
+  <div class="footer-background">
+    <img class="orange-overlay" src="./img/footer-pattern.png" alt="">
+    <div class="footer-content container">
+      <div class="footer-logo">
+        <img src="./img/footer-logo.png" alt="">
+      </div>
+      <div class="footer-social">
+        <ul>
+          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+          <li><a href="#"><i class="fa fa-google"></i></a></li>
+          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+        </ul>
+      </div>
+      <div class="footer-menu">
+        <ul>
+          <li><a href="#">About</a></li>
+          |
+          <li><a href="#">Speakers</a></li>
+          |
+          <li><a href="#">Become A Sponsor</a></li>
+          |
+          <li><a href="#">Videos</a></li>
+          |
+          <li><a href="#">News</a></li>
+          |
+          <li><a href="#">Contacts</a></li>
+        </ul>
+      </div>
+      <div class="footer-copyright">
+        <span>Copyright &copy; 2017 Eventech. All Rights Reserved.</span>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
