finish markup and style of about section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:900" rel="stylesheet">
 </head>
 
@@ -71,10 +72,32 @@
       <p class="intro-services">Design, Development, UX and Products</p>
     </div>
     <div class="intro-video">
-      <img src="./img/eventech-intro-video.jpg" alt="">
+      <img class="about-jpg" src="./img/eventech-intro-video.jpg" alt="">
+    </div>
+    <div class="featured-right-panel">
+      <ul class="featured-tabs">
+        <li><a href="#">Hands-on Experiences</a></li>
+        <li><a href="#">Networking</a></li>
+        <li><a href="#">Fun & Foods</a></li>
+      </ul>
+      <div class="right-panel-text">
+        <h3 class="title">Workshops - Project Sessions - Industry leaders</h3>
+        <p>We are rethoric question ran over her cheek When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.</p>
+        <blockquote>Throw myself down teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees. Anna has collated all their findings for this talk on the different kinds.</blockquote>
+        <p>Few stray gleams steal into the inner sanctuary grow familiar with the countless indescribable forms, then I feel the presence of the Almighty.</p>
+      </div>
+    </div>
+  </div>
+  <div class="facts-strip">
+    <div class="container">
+      <div class="attendees"></div>
+      <div class="speakers"></div>
+      <div class="sessions"></div>
+      <div class="countries"></div>
     </div>
   </div>
   <div class="footer-background">
+    <!-- Footer -->
     <img class="orange-overlay" src="./img/footer-pattern.png" alt="">
     <div class="footer-content container">
       <div class="footer-logo">
