complete markup and styles for facts-strip section

--- a/index.html
+++ b/index.html
@@ -88,12 +88,44 @@
       </div>
     </div>
   </div>
-  <div class="facts-strip">
-    <div class="container">
-      <div class="attendees"></div>
-      <div class="speakers"></div>
-      <div class="sessions"></div>
-      <div class="countries"></div>
+  <div class="facts-strip facts-strip-icons">
+    <div class="container clearfix">
+      <div class="attendees">
+        <span class="facts-icon">
+          <i class="fa fa-users"></i>
+        </span>
+        <div class="icon-facts">
+          <span class="count">968</span>
+          <h3>Attendees</h3>
+        </div>
+      </div>
+      <div class="speakers">
+        <span class="facts-icon">
+          <i class="fa fa-microphone"></i>
+        </span>
+        <div class="icon-facts">
+          <span class="count">117</span>
+          <h3>Speakers</h3>
+        </div>
+      </div>
+      <div class="sessions">
+        <span class="facts-icon">
+          <i class="fa fa-calendar"></i>
+        </span>
+        <div class="icon-facts">
+          <span class="count">121</span>
+          <h3>Sessions</h3>
+        </div>
+      </div>
+      <div class="countries">
+        <span class="facts-icon">
+          <i class="fa fa-globe"></i>
+        </span>
+        <div class="icon-facts">
+          <span class="count">119</span>
+          <h3>Countries</h3>
+        </div>
+      </div>
     </div>
   </div>
   <div class="footer-background">
