--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     </div>
   </div>
   <div class="facts-strip facts-strip-icons">
+    <!-- Facts Strip -->
     <div class="container clearfix">
       <div class="attendees">
         <span class="facts-icon">
@@ -124,6 +125,64 @@
         <div class="icon-facts">
           <span class="count">119</span>
           <h3>Countries</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="event-schedule">
+    <div class="container clearfix">
+      <div class="schedule-title">
+        <h2>Event Schedule</h2>
+        <p>Don't Miss a Topic on the Event</p>
+      </div>
+      <div class="schedule-details">
+        <ul class="event-days">
+          <li><a href="">Day One</a></li>
+          <li><a href="">Day Two</a></li>
+          <li><a href="">Day Three</a></li>
+        </ul>
+        <div class="event-day-details">
+          <h2 class="event-date">
+            Sunday, 21st October
+          </h2>
+          <div class="details-row">
+            <span class="details-slot-time">9:30 - 10:00</span>
+            <div class="details-slot">
+              <h3>Registration</h3>
+              <p>Pick up your name badge and goodie bag</p>
+            </div>
+          </div>
+          <div class="details-row-lg">
+            <span class="details-slot-time">10:30 - 11:15AM</span>
+            <div class="details-slot">
+              <h4>Jay Henderson</h4>
+              <h2>Reinventing Experiences to All</h2>
+              <p>Throw myself down teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable.</p>
+            </div>
+          </div>
+          <div class="details-row-lg">
+            <span class="details-slot-time">11:15 - 13:15PM</span>
+            <div class="details-slot">
+              <h4>Lydia Austin</h4>
+              <h2>Human Centered Design</h2>
+              <p>Minim Austin 3 wolf moon scenester aesthetic, umami odio pariatur bitters. Pop-up occaecat taxidermy street art, tattooed beard literally.</p>
+            </div>
+          </div>
+          <div class="details-row">
+            <span class="details-slot-time">13:30 - 14:30PM</span>
+            <div class="details-slot">
+              <h3>Lunch</h3>
+              <p>Five star buffet for everybody</p>
+            </div>
+          </div>
+          <div class="details-row-lg">
+            <span class="details-slot-time">14:35 - 16:00PM</span>
+            <div class="details-slot">
+              <h4>Ernest Backman</h4>
+              <h2>A frontier for designers: cultures of creativity</h2>
+              <p>Plaid fashion axe semiotics skateboard, try-hard food truck aesthetic biodiesel exercitation. Accusamus VHS Wes Anderson Banksy food truck vero.</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
