make event schedule section centered at 960px

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
       </div>
     </div>
   </div>
-  <div class="event-schedule">
-    <div class="container clearfix">
+  <div class="event-schedule container">
+    <div class="event-schedule-content">
       <div class="schedule-title">
         <h2>Event Schedule</h2>
         <p>Don't Miss a Topic on the Event</p>
