--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
     </div>
   </div>
   <div class="event-schedule container">
+    <!-- Event Schedule -->
     <div class="event-schedule-content">
       <div class="schedule-title">
         <h2>Event Schedule</h2>
@@ -182,6 +183,103 @@
               <h2>A frontier for designers: cultures of creativity</h2>
               <p>Plaid fashion axe semiotics skateboard, try-hard food truck aesthetic biodiesel exercitation. Accusamus VHS Wes Anderson Banksy food truck vero.</p>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="event-speakers speakers-content">
+    <div class="container clearfix">
+      <div class="speakers-title">
+        <h2>Event Speakers</h2>
+        <p>Listen, Learn, Get inspired.</p>
+      </div>
+      <div class="speakers-profile">
+        <div class="speaker-info">
+          <div class="speaker-image">
+            <img src="./img/speaker1.jpg" alt="">
+          </div>
+          <div class="speaker-name">
+            <h3><a href="#">Albert Brown</a></h3>
+            <p>CEO, Hughwoods</p>
+          </div>
+        </div>
+      </div>
+      <div class="speakers-profile">
+        <div class="speaker-info">
+          <div class="speaker-image">
+            <img src="./img/speaker2.jpg" alt="">
+          </div>
+          <div class="speaker-name">
+            <h3><a href="#">Katherine Key</a></h3>
+            <p>COO, Irving's Inc.</p>
+          </div>
+        </div>
+      </div>
+      <div class="speakers-profile">
+        <div class="speaker-info">
+          <div class="speaker-image">
+            <img src="./img/speaker3.jpg" alt="">
+          </div>
+          <div class="speaker-name">
+            <h3><a href="#">Ernest Backman</a></h3>
+            <p>Google Developer Expert</p>
+          </div>
+        </div>
+      </div>
+      <div class="speakers-profile">
+        <div class="speaker-info">
+          <div class="speaker-image">
+            <img src="./img/speaker4.jpg" alt="">
+          </div>
+          <div class="speaker-name">
+            <h3><a href="#">Angelica Bradley</a></h3>
+            <p>Creative Director at Cards</p>
+          </div>
+        </div>
+      </div>
+      <div class="speaker-row-gap"></div>
+      <div class="speakers-profile">
+        <div class="speaker-info">
+          <div class="speaker-image">
+            <img src="./img/speaker5.jpg" alt="">
+          </div>
+          <div class="speaker-name">
+            <h3><a href="#">Lydia Austin</a></h3>
+            <p>Head of Interactive</p>
+          </div>
+        </div>
+      </div>
+      <div class="speakers-profile">
+        <div class="speaker-info">
+          <div class="speaker-image">
+            <img src="./img/speaker6.jpg" alt="">
+          </div>
+          <div class="speaker-name">
+            <h3><a href="#">Jay Henderson</a></h3>
+            <p>iOS Developer</p>
+          </div>
+        </div>
+      </div>
+      <div class="speakers-profile">
+        <div class="speaker-info">
+          <div class="speaker-image">
+            <img src="./img/speaker7.jpg" alt="">
+          </div>
+          <div class="speaker-name">
+            <h3><a href="#">Lara Reynolds</a></h3>
+            <p>Android Developer</p>
+          </div>
+        </div>
+      </div>
+      <div class="speakers-profile">
+        <div class="speaker-info">
+          <div class="speaker-image">
+            <img src="./img/speaker8.jpg" alt="">
+          </div>
+          <div class="speaker-name">
+            <h3><a href="#">Matthew Blakeley</a></h3>
+            <p>Director, Nathan Inc.</p>
           </div>
         </div>
       </div>
