--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
     </div>
   </div>
   <div class="event-speakers speakers-content">
+    <!-- Speakers -->
     <div class="container clearfix">
       <div class="speakers-title">
         <h2>Event Speakers</h2>
@@ -282,6 +283,59 @@
             <p>Director, Nathan Inc.</p>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+  <div class="sponsors-partners">
+    <div class="container">
+      <div class="sponsors-partners-heading">
+        <h2>Sponsors & Partners</h2>
+        <p>They Helping us make this event possible</p>
+      </div>
+      <div class="sponsor clearfix">
+        <h3>Diamond Sponsors</h3>
+        <div class="sponsor-logo">
+          <a href=""><img src="./img/sponsor1.png" alt=""></a>
+        </div>
+        <div class="sponsor-logo">
+          <a href=""><img src="./img/sponsor2.png" alt=""></a>
+        </div>
+        <div class="sponsor-logo">
+          <a href=""><img src="./img/sponsor3.png" alt=""></a>
+        </div>
+      </div>
+      <div class="sponsor2 clearfix">
+        <h3>Platinum Sponsors</h3>
+        <div class="sponsor-logo2">
+          <a href=""><img src="./img/sponsor4.png" alt=""></a>
+        </div>
+        <div class="sponsor-logo2">
+          <a href=""><img src="./img/sponsor5.png" alt=""></a>
+        </div>
+        <div class="sponsor-logo2">
+          <a href=""><img src="./img/sponsor6.png" alt=""></a>
+        </div>
+        <div class="sponsor-logo2">
+          <a href=""><img src="./img/sponsor7.png" alt=""></a>
+        </div>
+      </div>
+      <div class="sponsor2 clearfix">
+        <h3>Exhibitor</h3>
+        <div class="sponsor-logo2">
+          <a href=""><img src="./img/sponsor8.png" alt=""></a>
+        </div>
+        <div class="sponsor-logo2">
+          <a href=""><img src="./img/sponsor9.png" alt=""></a>
+        </div>
+        <div class="sponsor-logo2">
+          <a href=""><img src="./img/sponsor10.png" alt=""></a>
+        </div>
+        <div class="sponsor-logo2">
+          <a href=""><img src="./img/sponsor11.png" alt=""></a>
+        </div>
+      </div>
+      <div class="button-row">
+        <a href="" class="become-sponsor-red">Become a Sponsor</a>
       </div>
     </div>
   </div>
