start layout for event pricing section

--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@
     </div>
   </div>
   <div class="sponsors-partners">
+    <!-- Sponsors / Partners -->
     <div class="container">
       <div class="sponsors-partners-heading">
         <h2>Sponsors & Partners</h2>
@@ -336,6 +337,40 @@
       </div>
       <div class="button-row">
         <a href="" class="become-sponsor-red">Become a Sponsor</a>
+      </div>
+    </div>
+  </div>
+  <div class="event-prices">
+    <div class="container">
+      <div class="prices-panel">
+        <h2>Early Bird</h2>
+        <h3><span>$149</span>/1 Person</h3>
+        <ul>
+          <li>1 Conference day</li>
+          <li>1 Workshop Day</li>
+          <li>Free Cofee/Lunch</li>
+          <li>Custom Badge</li>
+        </ul>
+      </div>
+      <div class="prices-panel">
+        <h2>Early Bird</h2>
+        <h3><span>$149</span>/1 Person</h3>
+        <ul>
+          <li>1 Conference day</li>
+          <li>1 Workshop Day</li>
+          <li>Free Cofee/Lunch</li>
+          <li>Custom Badge</li>
+        </ul>
+      </div>
+      <div class="prices-panel">
+        <h2>Early Bird</h2>
+        <h3><span>$149</span>/1 Person</h3>
+        <ul>
+          <li>1 Conference day</li>
+          <li>1 Workshop Day</li>
+          <li>Free Cofee/Lunch</li>
+          <li>Custom Badge</li>
+        </ul>
       </div>
     </div>
   </div>
