fix aligning prices panels on event pricing section

--- a/index.html
+++ b/index.html
@@ -344,7 +344,11 @@
     <div class="container">
       <div class="prices-panel">
         <h2>Early Bird</h2>
-        <h3><span>$149</span>/1 Person</h3>
+        <h2 class="pricing">
+          <span class="currency">$</span>
+          <strong>149</strong>
+          <small>/1 Person</small>
+        </h2>
         <ul>
           <li>1 Conference day</li>
           <li>1 Workshop Day</li>
@@ -353,23 +357,31 @@
         </ul>
       </div>
       <div class="prices-panel">
-        <h2>Early Bird</h2>
-        <h3><span>$149</span>/1 Person</h3>
+        <h2>Regular</h2>
+        <h2 class="pricing">
+          <span class="currency">$</span>
+          <strong>219</strong>
+          <small>/1 Person</small>
+        </h2>
         <ul>
           <li>1 Conference day</li>
-          <li>1 Workshop Day</li>
+          <li>2 Workshop Day</li>
           <li>Free Cofee/Lunch</li>
-          <li>Custom Badge</li>
+          <li>Premium Badge</li>
         </ul>
       </div>
       <div class="prices-panel">
-        <h2>Early Bird</h2>
-        <h3><span>$149</span>/1 Person</h3>
+        <h2>Last Chance</h2>
+        <h2 class="pricing">
+          <span class="currency">$</span>
+          <strong>379</strong>
+          <small>/1 Person</small>
+        </h2>
         <ul>
-          <li>1 Conference day</li>
-          <li>1 Workshop Day</li>
+          <li>2 Conference day</li>
+          <li>2 Workshop Day</li>
           <li>Free Cofee/Lunch</li>
-          <li>Custom Badge</li>
+          <li>Premium Badge</li>
         </ul>
       </div>
     </div>
